--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -41,6 +41,9 @@
         <p><b>Thành viên 2: </b><br/>Họ tên: Nguyễn Hữu Thạch</p>
     </div>
 
+    <div class="center">
+        <p><b>Thành viên 3: </b><br/>Họ tên: Nguyễn Trọng Nghĩa</p>
+    </div>
 </body>
 
 </html>
