--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -32,14 +32,18 @@
 
     <h2>Tên Nhóm: F.A TEAM</h2>
     <p>Hello World</p>
+
     <div class="center">
         <p><b>Thành viên 1: </b><br/>Họ tên: Nguyễn Đình Quốc</p>
     </div>
-    <br>
+
     <div class="center">
         <p><b>Thành viên 2: </b><br/>Họ tên: Nguyễn Hữu Thạch</p>
     </div>
 
+    <div class="center">
+        <p><b>Thành viên 3: </b><br/>Họ tên: Nguyễn Trọng Nghĩa</p>
+    </div>
 </body>
 
 </html>
